--- a/fe/imgv/package.json
+++ b/fe/imgv/package.json
@@ -9,7 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^9.6.0",
+    "axios": "^1.2.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.25",
+    "push.js": "^1.0.12",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
