--- a/fe/imgv/package.json
+++ b/fe/imgv/package.json
@@ -17,6 +17,7 @@
     "push.js": "^1.0.12",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vuedraggable": "^4.0.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
